--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
     "@supabase/auth-helpers-react": "^0.4.2",
     "@supabase/supabase-js": "^2.39.8",
     "@tanstack/react-query": "^5.29.2",
-    "bootstrap": "^5.3.3",
+    "bootstrap": "^5.3.0",
+    "install": "^0.13.0",
     "next": "14.1.1",
     "react": "^18",
-    "react-bootstrap": "^2.10.1",
+    "react-bootstrap": "^2.9.0-beta.1",
     "react-dom": "^18",
     "react-hook-form": "^7.51.1",
     "zod": "^3.22.4"
